; ModuleID = '/home/carl/AnghaBench/fastdfs/storage/trunk_mgr/extr_trunk_mem.c_trunk_mem_binlog_write.c'
source_filename = "/home/carl/AnghaBench/fastdfs/storage/trunk_mgr/extr_trunk_mem.c_trunk_mem_binlog_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@trunk_file_lock = common dso_local global i32 0, align 4
@TRUNK_OP_TYPE_ADD_SPACE = common dso_local global i8 0, align 1
@g_trunk_total_free_space = common dso_local global i32 0, align 4
@TRUNK_OP_TYPE_DEL_SPACE = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8, %struct.TYPE_6__*)* @trunk_mem_binlog_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @trunk_mem_binlog_write(i32 %0, i8 signext %1, %struct.TYPE_6__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8, align 1
  %6 = alloca %struct.TYPE_6__*, align 8
  store i32 %0, i32* %4, align 4
  store i8 %1, i8* %5, align 1
  store %struct.TYPE_6__* %2, %struct.TYPE_6__** %6, align 8
  %7 = call i32 @pthread_mutex_lock(i32* @trunk_file_lock)
  %8 = load i8, i8* %5, align 1
  %9 = sext i8 %8 to i32
  %10 = load i8, i8* @TRUNK_OP_TYPE_ADD_SPACE, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp eq i32 %9, %11
  br i1 %12, label %13, label %22

13:                                               ; preds = %3
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i32, i32* @g_trunk_total_free_space, align 4
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %19, %17
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* @g_trunk_total_free_space, align 4
  br label %38

22:                                               ; preds = %3
  %23 = load i8, i8* %5, align 1
  %24 = sext i8 %23 to i32
  %25 = load i8, i8* @TRUNK_OP_TYPE_DEL_SPACE, align 1
  %26 = sext i8 %25 to i32
  %27 = icmp eq i32 %24, %26
  br i1 %27, label %28, label %37

28:                                               ; preds = %22
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i32, i32* @g_trunk_total_free_space, align 4
  %34 = sext i32 %33 to i64
  %35 = sub nsw i64 %34, %32
  %36 = trunc i64 %35 to i32
  store i32 %36, i32* @g_trunk_total_free_space, align 4
  br label %37

37:                                               ; preds = %28, %22
  br label %38

38:                                               ; preds = %37, %13
  %39 = call i32 @pthread_mutex_unlock(i32* @trunk_file_lock)
  %40 = load i32, i32* %4, align 4
  %41 = load i8, i8* %5, align 1
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %43 = call i32 @trunk_binlog_write(i32 %40, i8 signext %41, %struct.TYPE_6__* %42)
  ret i32 %43
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1

declare dso_local i32 @trunk_binlog_write(i32, i8 signext, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
